[package]
authors = ["Jacob Lott <41162160+jklott@users.noreply.github.com>"]
name = "scheduler_lottery"
description = "Provides lottery scheduling functionality and picks the next task"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.8"
spin = "0.9.4"
task = { path = "../task" }

[lib]
crate-type = ["rlib"]
